--- a/src/index.html
+++ b/src/index.html
@@ -1,25 +1,28 @@
 <!doctype html>
 <html lang="en" dir="ltr">
+
 <head>
   <meta charset="utf-8">
-  <title>Arweave Wiki</title>
+  <title>STAMP Protocol Wiki</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta property="og:title" content="Arweave Wiki"/>
-  <meta property="og:image" content="https://arweave.net/u5JJ4kgDECvSt5dN1N9RXyHmL_7uJixpiqan0pX4kFo"/>
-  <meta property="og:description" content="A decentralized wiki for Arweave."/>
+  <meta property="og:title" content="STAMP Protocol Wiki" />
+  <meta property="og:image" content="https://arweave.net/u5JJ4kgDECvSt5dN1N9RXyHmL_7uJixpiqan0pX4kFo" />
+  <meta property="og:description" content="A decentralized wiki for STAMP Protocol." />
   <link rel="icon" type="image/x-icon" href="./assets/img/favicon-183x183.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&amp;display=swap" rel="stylesheet"/>
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600&amp;display=swap" rel="stylesheet"/>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700&amp;display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600&amp;display=swap" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
+
 <body class="arwiki-light">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
